Fix level bar not showing in pantheon-files

--- a/gtk-3.0/apps/_pantheon.scss
+++ b/gtk-3.0/apps/_pantheon.scss
@@ -290,7 +290,8 @@ LibraryWindow {
   &.view {
     &.level-bar {
       &,&:selected,&:selected:focus{
-        background-color: lighten($_sidebar_color, 15%);
+        background: linear-gradient(to right, lighten($_sidebar_color, 15%));
+        background-image: lighten($_sidebar_color, 15%);
         border: 1px solid transparentize(black, 0.86);
         box-shadow: 0 1px 0 transparentize(#000, 0.75);
         border-radius: 2px;
@@ -301,8 +302,7 @@ LibraryWindow {
     }
     &.fill-block{
       &,&:hover,&:selected,&:selected:focus{
-        background-image: none;
-        background-color: $yellow;
+        background: linear-gradient(to right, $yellow, $yellow);
       }
     }
   }
